--- a/.github/workflows/jellyfin-web_release_trigger.yml
+++ b/.github/workflows/jellyfin-web_release_trigger.yml
@@ -14,9 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - name: Get next version
+        uses: reecetech/version-increment@2023.9.3
+        id: version
+        with:
+          scheme: semver
+          increment: patch
 
       - name: Clone jellyfin-tizen
         uses: sudosubin/git-clone-action@v1.0.1
@@ -40,12 +43,14 @@ jobs:
               "name": "@glenlowland/jellyfin-tizen",
               "packageType": "app",
               "appName": "Jellyfin",
-              "appPath": ""
+              "appPath": "",
+              "version": "${{ steps.version.outputs.version }}"
             }
 
       - name: Build jellyfin-tizen
         run: |
           cd jellyfin-tizen
+          rm .gitignore
           npm install @glenlowland/jellyfin-web
           JELLYFIN_WEB_DIR=./node_modules/@glenlowland/jellyfin-web/dist npm ci --no-audit
 
