--- a/.github/workflows/jellyfin-web_release_trigger.yml
+++ b/.github/workflows/jellyfin-web_release_trigger.yml
@@ -55,6 +55,7 @@ jobs:
           replaces: |
             return profileBuilder({ enableMkvProgressive: false, enableSsaRender: true, supportsTrueHd: true });
           include: "jellyfin-tizen/tizen.js"
+          separator: "___"
 
       - name: Build jellyfin-tizen
         run: |
