--- a/.github/workflows/jellyfin-web_release_trigger.yml
+++ b/.github/workflows/jellyfin-web_release_trigger.yml
@@ -63,7 +63,7 @@ jobs:
           finds: |
             .setAttribute('defer', '');
           replaces: |
-            .setAttribute('', '');
+            .setAttribute('type', 'text/javascript');
           include: "jellyfin-tizen/gulpfile.js"
           separator: "___"
 
